# rust-secure-ai-workflow

./: .gitignore  Cargo.toml  README.md
ai-workflow/config/: ai-workflow-config.json
certs/: openssl.conf  public.pem  rootCA.key  rootCA.pem  rootCA.srl  ssl.cert  ssl.csr  ssl.key
certs/bevin/: openssl.conf  ssl.cert  ssl.csr
certs/george/: openssl.conf  ssl.cert  ssl.csr
certs/grayman/: openssl.conf  ssl.cert  ssl.csr
certs/lavern/: openssl.conf  ssl.cert  ssl.csr
certs/lewellyn/: openssl.conf  ssl.cert  ssl.csr
certs/vance/: openssl.conf  ssl.cert  ssl.csr
certs/vinnie/: openssl.conf  ssl.cert  ssl.csr
config/: secure-ai-config.json  secure-ai-workflow-config.json  secure-ai-workflow.service
docs/: example-component.js  example-payload.json
scripts/: document-index-execute.sh  gemini-ai-execute.sh  gemini-ai-execute.sh-signature  gemini-ai-execute.sh.signed  get-token.sh  git-service.sh  infrastructure.sh  kv-store-service.sh  sec-gov-stock.sh  sec-gov-stock.sh-signature  sec-gov-stock.sh.signed  simple-ai.sh  simple-ai.sh-signature  test-delay.sh
setup/: variables.sh
setup/certs-manager/: infrastructure.sh
setup/microservices/ai-workflow/: infrastructure.sh
setup/nginx/: infrastructure.sh  nginx-hosts  nginx.conf  notes.md
src/: main.rs
src/api/: schema.rs
src/certs/: controller.rs
src/command/: process.rs
src/config/: process.rs
src/error/: handler.rs
src/handlers/: common.rs  execute.rs  mod.rs  payload.rs  queue.rs
src/httpservices/: client.rs  server.rs
src/service/: mod.rs  service.rs  validate.rs
(+4 files in other folders)
