[package]
name = "secure-ai-workflow"
version = "0.5.2"
authors = ["Luigi Mario Zuccarelli<>luigizuccarelli@gmail.com"]
edition = "2021"

[dependencies]
http = "1.1.0"
http-body-util = "0.1.2"
hyper = "1.4.1"
hyper-util = { version = "0.1.9", default-features = false, features = ["client-legacy", "tokio","server-auto"]}
rustls = "0.23.13"
rustls-pemfile = "2.2.0"
rustls-pki-types = "1.9.0"
tokio = { version = "1.40.0", features = ["full"] }
tokio-rustls = "0.26.0"
ssh2 = "0.9.4"
serde = "1.0.196"
serde_derive = "1.0.196"
serde_json = "1.0.113"
custom-logger = { git = "https://github.com/lmzuccarelli/rust-custom-logger", branch = "main", version = "0.2.0" }
bytes = "1.9.0"
serde_yaml = "0.9.34"
url = "2.5.4"
clap = { version = "4.5.41", features = ["derive"] }
jsonwebtoken = "9.3.1"
openssl = "0.10.66"
chrono = "0.4.41"
async-trait = "0.1.89"
surrealkv = "0.10.1"
hyper-tls = "0.6.0"
native-tls = "0.2.14"
tokio-native-tls = "0.3.1"


[profile.release]
strip = true # Strip symbols from the binary
opt-level = "s" # Optimize for size
lto = true # Enable link-time optimization
codegen-units = 1 # Mazimize size reduction optimization
